# Smart-Water-Tap

SmartWaterTap/: .gitignore  CMakeLists.txt
SmartWaterTap/components/myControl/: CMakeLists.txt  myControl.cpp
SmartWaterTap/components/myControl/include/: myControl.h
SmartWaterTap/components/myHttp/: CMakeLists.txt  myHttp.cpp
SmartWaterTap/components/myHttp/include/: myHttp.h
SmartWaterTap/components/myNvs/: CMakeLists.txt  myNvs.cpp
SmartWaterTap/components/myNvs/include/: myNvs.h
SmartWaterTap/components/myStepper/: CMakeLists.txt  myStepper.cpp
SmartWaterTap/components/myStepper/include/: myStepper.h
SmartWaterTap/components/myWifi/: CMakeLists.txt  myWifi.cpp
SmartWaterTap/components/myWifi/include/: myWifi.h
SmartWaterTap/main/: main.cpp
SmartWaterTapApplication/MieleSmartWaterTap/: .gitignore  MieleSmartWaterTap.sln
SmartWaterTapApplication/MieleSmartWaterTap/MieleSmartWaterTap/MieleSmartWaterTap/: App.xaml  App.xaml.cs  MieleSmartWaterTap.csproj  UnityContainerBuilder.cs
SmartWaterTapApplication/MieleSmartWaterTap/MieleSmartWaterTap/MieleSmartWaterTap.Droid/: MainActivity.cs  MieleSmartWaterTap.Droid.csproj  SplashScreenActivity.cs
SmartWaterTapApplication/MieleSmartWaterTap/MieleSmartWaterTap/MieleSmartWaterTap.Droid/Properties/: AndroidManifest.xml  AssemblyInfo.cs
SmartWaterTapApplication/MieleSmartWaterTap/MieleSmartWaterTap/MieleSmartWaterTap.iOS/: AppDelegate.cs  Info.plist  Main.cs  MieleSmartWaterTap.iOS.csproj
SmartWaterTapApplication/MieleSmartWaterTap/MieleSmartWaterTap/MieleSmartWaterTap/Models/: SmartWaterTap.cs
(+33 files in other folders)
